# cases

./: .gitignore  CLAUDE.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml
backend/api/: api.py  security.py
backend/api/endpoints/: cases.py
backend/apps/accounts/: models.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/cases/: admin.py  embeddings.py  models.py  schemas.py  services.py
backend/apps/cases/migrations/: 0001_initial.py  0002_alter_case_niche_vec_alter_segment_centroid.py  0003_unaccent.py
backend/apps/cases/templates/admin/cases/case/: change_list.html  import_csv.html
backend/core/: settings.py  urls.py
frontend/: Dockerfile  buildRequest.check.ts  nuxt.config.ts  package-lock.json  package.json
frontend/app/: app.vue
frontend/app/assets/css/: main.css
frontend/app/components/: CaseCard.vue
frontend/app/utils/: buildRequest.ts
