[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.6.2",
    "django-ninja-extra>=0.31.5",
    "gunicorn>=26.0.0",
    "openai>=2.44.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "python-decouple>=3.8",
    "sentence-transformers>=5.6.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "django-types>=0.24.0",
]
